# tokenary

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
cdpify/generator/: __main__.py
data/: model_prices.generated.json
examples/: basic_calculate.py  multimodal_cost.py  request_object.py
scripts/: generate_catalog.sh
tests/: test_cli.py  test_downloader.py  test_generator_and_downloader.py  test_runtime_calculate.py  test_runtime_catalog.py  test_tokenary.py  test_views.py
tokenary/: __init__.py  _generated.py  cli.py  downloader.py  tokenary.py  views.py
tokenary/generator/: __init__.py  __main__.py  catalog.py  downloader.py  generator.py  schemas.py
