[project]
name = "tokenary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]

[tool.uv]
package = true
default-groups = ["dev"]

[project.scripts]
tokenary-generate = "tokenary.generator.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"
